<resources>
    <string name="app_name">project1</string>
    <string name="WheelDeal">Welcome To WheelDeal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_in1">Sign In</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="bestseller">BestSeller</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="nissan_cars">Nissan Cars</string>
    <string name="tata_nexon_car_one_of_comfortable_car_with_good_condition_tata_neaxon">Tata nexon car one of comfortable car with good condition tata neaxon</string>
    <string name="_2022">2022</string>
    <string name="_2400">2400$</string>
    <string name="edit">Edit</string>
    <string name="add">ADD</string>
    <string name="no_product_added_in_this_categories">No product added in this categories</string>
    <string name="_0">0</string>
    <string name="item">ITEM</string>
    <string name="next">Next</string>
    <string name="added">Added</string>
    <string name="products_in_the_cart">Products in the cart</string>
    <string name="_2000000">₹2000000</string>
    <string name="bill_details">Bill Details</string>
    <string name="sub_total">sub Total</string>
    <string name="free">Free</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="grand_total">Grand Total</string>
    <string name="phone_upi">Phonepe UPI</string>
    <string name="place_order">Place Order</string>
    <string name="please_enter_your_address">please enter your address</string>
    <string name="pin_code">Pin Code</string>
    <string name="phone_no">Phone No.</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="enter_address_city_sector_etc">Enter address(city,sector,etc..)</string>
    <string name="loading">Loading…</string>
    <string name="my_account">My Account</string>
    <string name="user_name">user name</string>
    <string name="your_information">your Information</string>
    <string name="your_orders">Your Orders</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
    <string name="_10_10_2022">10-10-2022</string>
    <string name="delivered">Delivered</string>
    <string name="_20000">₹20000</string>
    <string name="order_items">Order Items</string>
</resources>