<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Profile"
        />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1.30dp"
        android:background="#DAD4D4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbProfile"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/view"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/my_account"
            android:textStyle="bold"
            android:textSize="23.40sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginTop="6.50dp"
            android:textColor="@color/black"
            android:textSize="19.60sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_information"
            android:layout_marginTop="19.50dp"
            android:textColor="@color/black"
            android:textSize="15.60sp"
            />
        <LinearLayout
            android:id="@+id/llOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="13.00dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.50dp"
                android:src="@drawable/baseline_delivery_dining_24"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:text="@string/your_orders"
                android:layout_marginStart="13.00dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
            />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="26.00dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="13.00dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.50dp"
                android:src="@drawable/baseline_edit_location_24"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginStart="13.00dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="26.00dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="13.00dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.50dp"
                android:src="@drawable/baseline_logout_24"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginStart="13.00dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="26.00dp"
                android:layout_weight="0.1"
                android:layout_gravity="center"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>