<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_5sdp"
    android:layout_margin="@dimen/_5sdp"
    android:background="@color/white"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="0dp"
            android:layout_height="52.00dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_cart"
            android:padding="3.90dp"
            android:src="@drawable/bajaj"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            android:orientation="vertical"
            android:weightSum="3">
            <TextView
                android:id="@+id/tvProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:padding="3.2dp"
                android:maxLines="1"
                android:text="@string/nissan_cars"
                android:textColor="@color/black"
                android:textSize="13.00sp"/>
            <TextView
                android:id="@+id/tvPurchaseYear"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="3.2dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/_2022"
                android:textColor="@color/black"
                android:textSize="13.00sp"/>
            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="3.2dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/_2000000"
                android:textColor="@color/black"
                android:textSize="13.00sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:background="@drawable/bg_product_count"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/tvProductCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvAdded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:gravity="center"
                android:text="@string/added"
                android:textColor="#FFFFFF"
                android:textSize="16.50sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>