<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2.60dp"
    >
 <androidx.cardview.widget.CardView
     android:id="@+id/cvProduct"
     android:layout_width="match_parent"
     android:layout_height="286dp"
     android:backgroundTint="@color/white"
     app:cardCornerRadius="13dp"
     android:elevation="0dp"
     app:cardPreventCornerOverlap="false"
     android:background="@drawable/bg_stock"
     app:cardUseCompatPadding="true"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
  >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="13.00dp"
     android:orientation="vertical">
     <com.denzcoskun.imageslider.ImageSlider
         android:id="@+id/ivImageSlider"
         android:layout_width="wrap_content"
         android:layout_height="156dp"
         app:iss_auto_cycle="false"
         app:iss_text_align="CENTER"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingClass"
         />
     <TextView
         android:id="@+id/tvProductTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:ellipsize="end"
         android:text="@string/tata_nexon_car_one_of_comfortable_car_with_good_condition_tata_neaxon"
         android:textColor="@color/black"
         android:textSize="19.50sp"/>
     <TextView
         android:id="@+id/tvPurchaseYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_2022"
         android:textColor="#6F6F6F"
         android:textSize="15.60sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2400"
                    android:textColor="@color/black"
                    android:textSize="15.60sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tvAdd"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="5.20dp"
                    android:gravity="center"
                    android:textColor="@color/green"
                    android:background="@drawable/bg_stock"
                    android:textSize="14.30sp"/>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/llProductCount"
                    android:layout_width="78.00dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_product_count"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/tvProductCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:id="@+id/tvAdded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:gravity="center"
                        android:text="@string/added"
                        android:textColor="#FFFFFF"
                        android:textSize="16.50sp"/>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
     
 </LinearLayout>
 </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>