<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="serif"
        android:text="Sign Up"
        android:textColor="#F1EFEF"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/edittxtshape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/edittxtshape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittxtshape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittxtshape"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/brownDark"
        android:fontFamily="serif"
        android:text="@string/sign_in1"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Register"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/red"
        android:fontFamily="serif"
        android:text="@string/register"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signIn" />

</androidx.constraintlayout.widget.ConstraintLayout>