<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="6.50dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.50dp"
            android:layout_marginBottom="6.50dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/tvOrderDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:text="@string/_10_10_2022"
                android:textStyle="bold"
                android:textSize="16.90sp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/tvOrderStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight=".3"
                android:background="@drawable/bg_product_count"
                android:backgroundTint="@color/yellow"
                android:text="@string/delivered"
                android:textStyle="bold"
                android:textSize="16.90sp"
                android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6.50dp"
            android:layout_marginBottom="6.50dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/tvOrderTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tata_nexon_car_one_of_comfortable_car_with_good_condition_tata_neaxon"
                android:layout_weight=".75"
                android:maxLines="2"
                android:textSize="16.90sp"
                android:textColor="@color/black"
                android:ellipsize="end"/>
            <TextView
                android:id="@+id/tvOrderPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:textSize="16.90sp"
                android:text="@string/_20000"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>